kleine tekstuele aanpassing om te kijken of de snapshot wordt aangepast.

--- a/ch01.md
+++ b/ch01.md
@@ -1,6 +1,6 @@
 # Niet-normatieve deel
 
-Bijvoorbeeld een introductie.
+Bijvoorbeeld een introductie is niet normatief.
 
 <p class="note" title="index">
 Dit hoofdstuk is toegevoegd met `class="informative"` in `config.js`.
