--- a/ch02.md
+++ b/ch02.md
@@ -1,7 +1,7 @@
 # Meer inhoud
 
 ## Definities
-<dfn>Definitie</dfn>: Een definitie is een beschrijving van een woord. Een ander woord voor definitie is betekenis of beschrijving.
+<dfn>Definitie</dfn>: Een definitie is een beschrijving van een woord. Een ander woord voor _definitie_ is betekenis of beschrijving.
 
 ## Afbeeldingen
 
