--- a/ch01.md
+++ b/ch01.md
@@ -5,3 +5,10 @@ Bijvoorbeeld een introductie is niet normatief.
 <p class="note" title="index">
 Dit hoofdstuk is toegevoegd met `class="informative"` in `config.js`.
 </p>
+
+## Een subparagraaf
+
+| Sleutel | Waarde |
+| ------- | ------ |
+| key     | value  |
+
